# TAIGA

./: .gitignore  .release-please-manifest.json  ANDROID_SETUP.md  PLAN.md  README.md  bump.py  release-please-config.json
.github/workflows/: android-build.yml  ci.yml  release-please.yml  release.yml
crates/taiga-egui/: CHANGELOG.md  Cargo.toml
crates/taiga-egui/android/: gradle.properties  settings.gradle.kts
crates/taiga-egui/android/app/: build.gradle.kts
crates/taiga-egui/android/app/src/main/: AndroidManifest.xml
crates/taiga-egui/android/app/src/main/java/com/taiga/mesh/: MainActivity.kt  MyceliumCore.kt  TaigaBleManager.kt  TaigaWifiManager.kt
crates/taiga-egui/android/gradle/: config.properties
crates/taiga-egui/src/: lib.rs  main.rs  proxy.rs
crates/taiga-mycelium/: CHANGELOG.md  Cargo.toml
crates/taiga-mycelium/src/: ble_root.rs  crypto.rs  dtn.rs  jni_bridge.rs  lib.rs  udp_root.rs  wifi_root.rs
crates/taiga-node/: Cargo.toml
crates/taiga-resin/: Cargo.toml
crates/taiga-resin/src/: lib.rs
