[package]
name = "taiga-mycelium"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
btleplug = "0.12.0"
chacha20poly1305 = "0.10.1"
jni = "0.21.1"
lazy_static = "1.5.0"
log = "0.4.29"
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
redb = "4.1.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full", "io-util", "net"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
